--- a/src/App.css
+++ b/src/App.css
@@ -123,14 +123,56 @@ button:hover::after {
   text-transform: uppercase;
   text-align: center;
 }
+#img-intro_txt{
+  background-image: url(./images/WP_000585.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 100%;
+  height: 80vh;
+  margin: 5% 0 5% 0;
+}
+#intro_txt{
+  width: 100%;
+  height: 100%;
+  align-items:center;
+}
 #descr-intro_txt {
+  width: 50%;
   font-size: 0.95rem;
   line-height: 1.5;
-  margin: 5% 20%;
+  margin: 5% 5% 5% 12%;
   column-count: 1;
   column-gap: 50px;
   text-align: justify;
   text-justify: inter-word;
+  display: inline-block;
+  vertical-align: middle;
+}
+#descr-howto_txt {
+  font-size: 0.95rem;
+  line-height: 1.5;
+  margin: 5% 15% 15% 15%;
+  column-count: 1;
+  column-gap: 50px;
+  text-align: justify;
+  text-justify: inter-word;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#sidebar{
+  width: 20%;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  font-size: 0.75rem;
+  font-style: italic;
+  line-height: 1.5;
+  border: 1px solid white;
+}
+#text-sidebar{
+  padding: 10px;
 }
 /* END INTRO_TEXT */
 
