--- a/src/components/Add.css
+++ b/src/components/Add.css
@@ -1,8 +1,9 @@
 .map-container {
-  position: absolute;
-  height: 100%;
+  margin-top: 5%;
+  position: relative;
+  height: 600px;
   width: 100%;
-  top: 0px;
+  margin: auto;
   bottom: 0;
   left: 0px;
   right: 0;
@@ -35,17 +36,56 @@
   cursor: pointer;
 }
 
+.mapboxgl-popup-content{
+  padding: 25px !important;
+}
+
+#box{
+  width: 100%;
+}
+
 #title-map{
   color:#ffe54c;
-  position:fixed;
+  position:absolute;
   width: 25px;
   height: 10px;
   z-index: 9999;
   margin-left: 120px;
-  margin-top: 400px;
+  margin-top: 120px;
   text-align: center;
   font-size: 3.5rem;
   font-weight: bold;
   border: 1px solid white;
   padding: 2px;
+}
+
+#title-source{
+  color:#ffe54c;
+  position:absolute;
+  width: 25px;
+  height: 10px;
+  z-index: 9999;
+  margin-left: 120px;
+  margin-top: 50px;
+  text-align: center;
+  font-size: 3.5rem;
+  font-weight: bold;
+  border: 1px solid white;
+  padding: 2px;
+}
+
+.txt-source {
+  column-count: 3;
+  column-gap: 50px;
+  color: white;
+  font-size: 0.8rem;
+  z-index: 9999;
+}
+
+.box-txt-source{
+  margin-top: 170px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  z-index: 9999;
 }
